# sshim

./: .gitignore  .travis.yml  LICENSE  Makefile  README  README.md  conf.py  index.rst  requirements.txt  setup.cfg  setup.py  sshim.py
.github/workflows/: main.yml
examples/: counter.py  device.py  hello_world.py
sshim/: Server.py  __init__.py  reraise2.py  reraise3.py
tests/unit/: __init__.py  test_basic.py  test_exec.py  test_failure.py  test_serial.py  test_sshim.py  test_unicode.py
