[metadata]
name = sshim
version = 1.3.3
description = Scriptable SSH server for testing SSH clients.
author = Simon Engledew
author_email = simon@engledew.com
url = http://www.engledew.com
license = MIT
keywords =
    ssh
    paramiko
    testing
classifiers =
    Development Status :: 1 - Planning
    Operating System :: OS Independent
    Programming Language :: Python

[options]
install_requires =
    paramiko
    six
zip_safe = True
include_package_data = False
packages = find:

[options.extras_require]
tests = nose

[bdist_wheel]
universal = 1
